# fr3_stack

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  fr3-stack  mkdocs-backup.yml  mkdocs.yml  pyproject.toml
docs/: architecture.md  controllers.md  index.md  quickstart.md  wire.md
examples/: 00_read_state.py  01_move_xyz.py  02_move_to.py  03_circle.py  04_hybrid_force_position.py  05_rotate.py  apply_hybrid_yaml.py  bench_cmd.py  bench_state.py  cart_test.py  circle_lerp_compare.py  circle_quick.py  fr3.example.yaml  reset.py  smoke.py  tune_inner_impedance.py
fr3_stack/: __init__.py  agent.py  client.py  config.py  geometry.py  interpolation.py  measure.py  robot.py  state.py
fr3_stack/configs/: admittance.yaml  cartesian_impedance.yaml  hybrid.circle.yaml  hybrid.yaml  idle.yaml  joint_impedance.yaml
fr3_stack/sensors/: __init__.py
fr3_stack/sensors/bota/: __init__.py  _common.py  ft_calibration.py  ft_calibration_auto.py  ft_calibration_record.py  ft_compensated_publisher.py  plot.py
fr3_stack/sensors/bota/config/: ft_calibration.yaml  ft_calibration_waypoints.yaml
fr3_stack/wire/: __init__.py  _hybrid_math.py  _schema.py  _yaml.py
include/fr3_stack/: motion_generator.hpp
include/fr3_stack/controllers/: cartesian_admittance_controller.hpp  cartesian_impedance_controller.hpp  controller_base.hpp  gravity_compensation_controller.hpp  hybrid_force_motion_controller.hpp  joint_impedance_controller.hpp
include/fr3_stack/sensors/: compensated_wrench_source.hpp  payload_calib.hpp  wrench_frame.hpp
include/fr3_stack/sensors/bota/: bota_wrench_source.hpp  wrench_source.hpp
include/fr3_stack/utils/: controllers_common.hpp  fiters.hpp  friction_model.hpp  joint_limits.hpp  log.hpp  streaming_target_interpolator.hpp
proto/: fr3.capnp
scripts/: docs  docs-backup
src/: main.cpp
src/controllers/: cartesian_admittance_controller.cpp  cartesian_impedance_controller.cpp  gravity_compensation_controller.cpp  hybrid_force_motion_controller.cpp  joint_impedance_controller.cpp
src/sensors/: compensated_wrench_source.cpp  payload_calib.cpp
src/sensors/bota/: bota_wrench_source.cpp  wrench_source.cpp
tests/: conftest.py  test_agent.py  test_arm.py  test_example_04_hybrid_force_position.py  test_geometry.py  test_geometry_libfranka_parity.py  test_hybrid_apis_star.py  test_hybrid_force_position.py  test_hybrid_real_tasks.py  test_interpolation.py  test_package_layout.py  test_robot_client.py  test_schema.py
tests/cpp/: test_controller_math.cpp
tests/cpp/franka_mock/franka/: exception.h  model.h  robot_state.h
